# Minimal-CPU

./: CMakeLists.txt
include/mincpu/: cpu.h
include/render/: render.h
src/: main.c
src/mincpu/: cpu.c
src/render/: render.c
